[package]
name = "rustsync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
crossbeam-channel = "0.5.15"
env_logger = "0.11.8"
globset = "0.4.16"
log = "0.4.27"
notify = { version = "8.1.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
structopt = "0.3.26"
toml = "0.9.4"
walkdir = "2.5.0"

[lib]
name = "rustsync"
path = "src/lib.rs"
